--- a/detyra3/index.html
+++ b/detyra3/index.html
@@ -65,7 +65,7 @@
 <footer id="footer">
   <p>©</p>
 <h3 style="margin-bottom: 7px;">UBT - Prill 2020 </h3>
-<a href="#" style="text-decoration: none;color:black;border: 2px solid black;padding: 2px;" target="_blank"> RepositoryLink</a>
+<a href="https://github.com/arditbytyci/detyra3" style="text-decoration: none;color:black;border: 2px solid black;padding: 2px;" target="_blank"> RepositoryLink</a>
 
 
 </footer>
